PROJECT(main)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# subdir
ADD_SUBDIRECTORY(src)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)
INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}/src/")
ADD_EXECUTABLE(main ${DIR_SRCS})
TARGET_LINK_LIBRARIES(main Test)
TARGET_COMPILE_OPTIONS(main PRIVATE --std=c++11)

# test
INCLUDE(CTest)
ADD_TEST(TestRun main)
ADD_TEST(Test5Add6 main 5 6)
SET_TESTS_PROPERTIES(Test5Add6 PROPERTIES PASS_REGULAR_EXPRESSION "11")
