load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/grahambrooks/go-bazel-container/api",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gorilla_mux//:go_default_library",
    ],
)

go_binary(
    name = "api",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "go_image",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    importpath = "github.com/grahambrooks/go-bazel-container",
)
load("@io_bazel_rules_docker//container:container.bzl", "container_push", "container_image")

container_image(
    name = "api-container",
    base = ":go_image",
    ports = ["8080:8080"],
)

load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

docker_push(
    name = "push-other-images",
    bundle = ":build-other-images",
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_bundle",
    "container_image",
    "container_push",
)

container_bundle(
    name = "build-other-images",
    images = {
        # cmd images
        "index.docker.io/shyw13/api_image:v0.1": "//api:go_image",
    },
)

# alternative
container_push(
    name = "push-container-image",
    format = "Docker",
    image = "//api:go_image",
    registry = "index.docker.io/shyw13",
    repository = "api_image",
    tag = "v0.2",
)
