[package]
name = "hello-world"
version = "0.1.0"
authors = ["Wei Yang <richard.weiyang@linux.alibaba.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello-world-derive = { path = "hello-world-derive" }
serde = { version = "1.0.27", features = ["derive"] }
serde_derive = "=1.0.27"
serde_json = ">=1.0.9"

