[package]
name = "hello-world-derive"
version = "0.1.0"
authors = ["Wei Yang <richard.weiyang@linux.alibaba.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "0.11.11"
quote = "0.3.15"

[lib]
proc-macro = true
